--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,7 @@ jobs:
           go-version: '^1.15.6'
       - run: go version
       - name: go build linux/amd64
+        uses: skx/github-action-build@master
         with:
           builder:  go build -ldflags="-s -w" -o out/linux/amd64/prettyJson .
         env:
