--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,26 +11,10 @@ jobs:
         with:
           go-version: '^1.15.6'
       - run: go version
-      - name: go build linux/amd64
-        with:
-          builder:  go build -ldflags="-s -w" -o out/linux/amd64/prettyJson .
-        env:
-          GOOS: linux
-          GOARCH: amd64
-      - name: go build darwin/amd64
+      - name: build go binaries
         uses: skx/github-action-build@master
         with:
-          builder: go build -ldflags="-s -w" -o out/darwin/amd64/prettyJson .
-        env:
-          GOOS: darwin
-          GOARCH: amd64
-      - name: Generate windows/386
-        uses: skx/github-action-build@master
-        with:
-          builder: go build -ldflags="-s -w" -o out/windows/386/prettyJson .
-        env:
-          GOOS: windows
-          GOARCH: 386
+          builder: .github/build.sh
       - uses: actions/upload-artifact@main
         with:
           name: github governance artifacts
