--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '^1.15.6'
-      - run: .github/build.sh
+#      - uses: actions/setup-go@v2
+#        with:
+#          go-version: '^1.15.6'
+#      - run: .github/build.sh
       - name: build go binaries
         uses: skx/github-action-build@master
       - uses: actions/upload-artifact@main
