--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,4 +22,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
-          args: out/**/prettyJson
+          args: out/darwin/amd64/prettyJson out/linux/amd64/prettyJson out/windows/386/prettyJson
