--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,16 +1,12 @@
 name: Build and publish
 on:
-  push:
-    branches: [ '*' ]
+  release:
+    types: [created]
 jobs:
   run-build-then-publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-#      - uses: actions/setup-go@v2
-#        with:
-#          go-version: '^1.15.6'
-#      - run: .github/build.sh
       - name: build go binaries
         uses: skx/github-action-build@master
       - uses: actions/upload-artifact@main
