Try using create-release action

--- a/.github/build
+++ b/.github/build
@@ -2,12 +2,10 @@ function build() {
     go build -ldflags="-s -w" -o "out/$1/$2/prettyJson" .
 }
 
-command -v go
-go version
-env
-ls -lah "$GOROOT"
-ls -lah /opt/hostedtoolcache/go
-
 build windows 386
 build darwin amd64
 build linux amd64
+
+pushd out || :
+zip -r prettyJson.zip *
+popd || :
