--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,9 @@
 name: Build and publish
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - * #  release:
+#    types: [created]
 jobs:
   run-build-then-publish:
     runs-on: ubuntu-latest
