--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Extract Repo Attributes
+        id: attrs
+        uses: ibnesayeed/repo-attrs@master
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.15.6'
