--- a/.github/build
+++ b/.github/build
@@ -1,3 +1,11 @@
+#!/usr/bin/env bash
+
+set -e
+
+go test .
+
+rm -rf out
+
 function build() {
     go build -ldflags="-s -w" -o "out/$1/$2/prettyJson" .
 }
@@ -6,6 +14,6 @@ build windows 386
 build darwin amd64
 build linux amd64
 
-pushd out || :
-zip -r prettyJson.zip *
-popd || :
+pushd out >/dev/null || :
+zip -qq -r prettyJson.zip *
+popd  >/dev/null || :
