--- a/.github/build
+++ b/.github/build
@@ -2,22 +2,25 @@
 
 set -e
 
-go test ./prettyJson/.
+go test ./...
 
 rm -rf out
+
+VERSION=1.0.4
 
 function build() {
     cpus=$(getconf _NPROCESSORS_ONLN)
 
+    top_level="$(git rev-parse --show-toplevel)"
     out_dir="out/$1/$2"
-    mkdir -p "$out_dir"
+    mkdir -p "$top_level/$out_dir"
+
     GOOS=$1 GOARCH=$2 \
         go build \
-        -ldflags "-X main.AppVersion=0.0.1 -X 'prettyJson.AppBuildTime=$(date)'" \
-        -ldflags="-s -w" \
+        -ldflags "-s -w -X main.AppVersion=${VERSION} -X 'main.AppBuildTime=$(date)'" \
         -p "$cpus" \
         -trimpath \
-        -o "$out_dir" \
+        -o "$top_level/$out_dir" \
         ./...
 }
 
